--- a/package.json
+++ b/package.json
@@ -9,17 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "4.6.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
+    "@types/react-modal": "^3.13.1",
+    "class-variance-authority": "^0.5.2",
+    "clsx": "^1.2.1",
     "next": "13.3.0",
-    "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1",
+    "react-feather": "2.0.10",
+    "react-modal": "^3.16.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "10.4.14",
+    "postcss": "8.4.21",
+    "prisma": "4.6.1",
+    "tailwindcss": "3.3.1",
+    "@tailwindcss/typography": "^0.5.7",
+    "ts-node": "10.9.1",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "eslint": "^8.31.0",
+    "eslint-config-next": "13.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-tailwindcss": "^3.8.0",
+    "tsconfig-paths": "4.1.1"
   }
 }
