--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@prisma/client": "4.6.1",
+    "@radix-ui/react-toast": "^1.1.3",
     "@types/node": "18.15.11",
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
     "@types/react-modal": "^3.13.1",
+    "@vercel/analytics": "^0.1.11",
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
+    "lucide-react": "^0.144.0",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -24,19 +27,19 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "autoprefixer": "10.4.14",
-    "postcss": "8.4.21",
-    "prisma": "4.6.1",
-    "tailwindcss": "3.3.1",
     "@tailwindcss/typography": "^0.5.7",
-    "ts-node": "10.9.1",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
+    "autoprefixer": "10.4.14",
     "eslint": "^8.31.0",
     "eslint-config-next": "13.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-tailwindcss": "^3.8.0",
+    "postcss": "8.4.21",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "prisma": "4.6.1",
+    "tailwindcss": "3.3.1",
+    "ts-node": "10.9.1",
     "tsconfig-paths": "4.1.1"
   }
 }
