--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
     "contentlayer": "^0.3.2",
+    "date-fns": "^2.30.0",
     "lucide-react": "^0.214.0",
     "next": "13.3.0",
     "next-contentlayer": "^0.3.2",
