--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "clsx": "^1.2.1",
     "contentlayer": "^0.3.2",
     "date-fns": "^2.30.0",
+    "framer-motion": "^10.12.16",
     "lucide-react": "^0.214.0",
     "next": "13.3.0",
     "next-contentlayer": "^0.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-feather": "2.0.10",
+    "resend": "^0.15.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
