--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "date-fns": "^2.30.0",
     "framer-motion": "^10.12.16",
     "lucide-react": "^0.214.0",
-    "next": "13.3.0",
+    "next": "^13.5.6",
     "next-contentlayer": "^0.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-feather": "2.0.10",
-    "resend": "^0.15.2",
+    "resend": "^3.2.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
@@ -35,7 +35,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-tailwindcss": "^3.8.0",
-    "postcss": "8.4.21",
+    "postcss": "^8.4.38",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "3.3.1",
